--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -17,7 +17,9 @@
   "notification_subscribers": [
     ""
   ],
-  "branches_to_filter": [],
+  "branches_to_filter": [
+    "master-oldev"
+  ],
   "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/Azure-RMSDocs.pt-br",
   "skip_source_output_uploading": false
 }
