--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -22,5 +22,12 @@
   ],
   "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/Azure-RMSDocs.pt-br",
   "git_repository_branch_open_to_public_contributors": "live",
-  "skip_source_output_uploading": false
+  "skip_source_output_uploading": false,
+  "dependent_repositories": [
+    {
+      "path_to_root": "_themes",
+      "url": "https://github.com/Microsoft/templates.docs.msft.pt-br",
+      "branch": "master"
+    }
+  ]
 }
